ai-helper/src/index.css
:root {
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
  background-color: black;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
  text-align: left;
  font-weight: normal;
  margin-bottom: 0;
}

h2 {
  margin: 0em;
  font-weight: normal;
}

p {
  text-align: left;
}

.date {
  margin-top: .2em;
}

.note {
  font-style: italic;
  margin-bottom: 0.5em;
  font-size: .9em;
}

.emphasis {
  text-transform: uppercase;
}

button {
  margin: 10px;
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

.input-form {
  width: 100%;
  align-items: center;
  margin-bottom: 40px;
}

#input-form-title {
  display: none;
}

.input { 
  padding-left: 0px;
  padding-right: 0.25em;
}

.input label {
  font-size: 1.17em;
  font-weight: bold;
  text-align: left;
}

.form-item-heading-area {
  display: flex;
  margin-bottom: 0;
  padding: 0;
  align-items: baseline;
  gap: 1em;
}


textarea {
  width: 95%;
  position: relative;
  height: 5em;
  border-radius: 8px;
  border: 3px solid #fff;
  color: #a0a0a0;
  background-color: #2b2b2b;
  padding: 1em;
}

.input-error {
  border: 3px solid #E44444;
}

.sec-clear-btn {
  border-radius: 50px;
  color: #fff;
  background-color:#444444;
  border: 1px solid #6b6b6b;
  padding: 0.2em 1em;
}

.sec-clear-btn:hover {
  background-color:#0A0808;
}

#persona, #context, #task, #output, #constraint {
  position: relative;
}

#clear-persona, #clear-context, #clear-task, #clear-output, #clear-constraint {
  position: absolute;
  bottom: 0.5em;
  right: 0em;
}

#form-level-buttons {
  width: 100%;
  justify-content: space-between;
  margin: 0;
  padding: 0;
}

.clear-btn {
  float:right;
  color: #fff;
  border: .5px solid lightgray;
  margin: 10px 0px;
}

.send-btn {
  width: 65%;
  float: left;
  background-color: white;
  color: black;
  margin: 10px 0px;
}

.send-btn:focus,
.send-btn:focus-visible {
  background-color: #7D0ADB;
  color: white;
  font-weight: bold;
}

.send-btn:hover {
  color: #ffe;
  background-color: #111111;
  border: 1px solid #ffe;
}

.error-message {
  display: flex;
  align-items: center;
  color: #E44444;
  margin: 0;
  font-weight: bold;
  gap: .5em;
}

.result {
  width: 100%;
  text-align: left;
  margin-bottom: 40px;
  padding-top: 5em;
}

.result-heading-area {
  flex: wrap;
  margin-bottom: 0;
  padding: 0;
  align-items: baseline;
  gap: 2em;
}

.result-box {
  border: .5px solid lightgray;
  height: auto;
  padding: 2em;
  border-radius: 10px;
}

.message.user {
  text-align: right;
}

.message.bot {
  text-align: left;
}

.message.loading {
  text-align: center;
  font-style: italic;
  color: #777;
  padding: 1rem;
}

.no-response-message {
  text-align: center;
  color: #999;
  padding: 1rem;
}

.footer {
  width: 100%;
  padding: 20px 0;
  background-color: black;
  border-top: .5px solid lightgray;
}

.footer a{
  color: white;
  display: flex;
  margin: 0;
  padding: 0;
}

.footer ul {
  text-align: left;
  list-style: none;
  padding: 0;
}

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
  .footer ul {
    gap: 2em;
  }

  .clear-btn {
    width: 25%;
  }

  .result-heading-area {
    display: flex;
  }  
  
}


/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {

  section {
    display: flex;
    gap: 2em;
  }
  
  .input-form {
    width: 50%;
  }

  .input { 
    padding-left: 0px;
  }

  .result {
    width: 50%;
    padding-top: 0;
  }

  .footer {
    display: flex;  
  }

  .footer ul {
    margin: 0 0 0 4em;
  }

}

